test/fails/func_redef.imp
fun  main()
vars tmp;
{       
        return  tmp;
}

fun  afunc(n)
{       
        return  n;
}

fun  afunc(n)
vars b;
{       
        return  b;
}
